testsuite/tests/libraries/should_compile/lib004.alan
string():proc
  s : byte[42];
  i : int;
{
  i = strlen(s);
  i = strcmp(s, s);
  strcpy(s, s);
  strcat(s, s);
}
